# serializer version: 1
# name: TestQuadXWaypointsCostEqual.test_snapshot
  -0.0055462600926
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.1
  0.0026603582032
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.10
  -2.7289e-09
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.100
  0.0566030635871
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.101
  0.997329550832
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.102
  -0.0151634063152
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.103
  -0.0478104861334
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.104
  0.0481746120429
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.105
  -0.0003568673201
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.106
  -0.0011692661657
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.107
  0.9357233470676
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.108
  -2.549858925073
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.109
  2.9884233715703
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.11
  1.02375e-08
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.110
  1.640789138667
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.111
  0.6288514442216
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.112
  0.4872928725352
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.113
  0.6669766880741
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.114
  0.8324039698305
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.115
  0.5084281789725
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.116
  0.1211492872657
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.117
  -0.7987824538961
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.118
  1.2021336783065
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.119
  0.3644446074751
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.12
  0.9681224473745
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.120
  -0.1472730130272
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.121
  2.5461881593664
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.122
  -1.445466799879
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.123
  1.7789477326785
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.124
  0.1606977145595
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.125
  1.3427045556727
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.126
  3.9111333860045
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.127
  0.9534036426416
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.128
  0.0140759759252
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.129
  -0.8213880819595
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.13
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.130
  0.2169066461662
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.131
  0.2364406065455
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.132
  -0.2875508483503
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.133
  1.6153741615185
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.134
  -1.1831856441942
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.135
  1.9795060463598
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.136
  -0.73447363574
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.137
  1.7638800814021
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.138
  3.723016888843
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.139
  0.3716327821708
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.14
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.140
  0.1176939007526
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.141
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.142
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.143
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.1176939007526,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.12114929, -0.79878245,  1.20213368]),
    'reference_error': array([-0.12150615,  0.79761319, -0.26641033]),
    'state_of_interest': array([-3.56867320e-04, -1.16926617e-03,  9.35723347e-01]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.144
  -2.003269192405
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.145
  -0.5348903436684
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.146
  -2.363649602021
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.147
  -0.0605195766159
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.148
  0.0099068422746
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.149
  0.0464569713232
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.15
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.150
  0.997036100218
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.151
  0.0415108512834
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.152
  -0.0469101224366
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.153
  1.0088456617315
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.154
  0.0007411082375
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.155
  -0.0006636029297
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.156
  0.9543445440036
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.157
  -2.3366309591134
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.158
  -0.3117343460441
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.159
  -0.8117999558004
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.16
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.160
  0.7414119910789
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.161
  0.6942378337572
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.162
  0.7103581813806
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.163
  0.5827819616312
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.164
  0.9415111785722
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.165
  0.1211492872657
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.166
  -0.7987824538961
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.167
  1.2021336783065
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.168
  0.3644446074751
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.169
  -0.1472730130272
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.17
  0.0504498315889
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.170
  2.5461881593664
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.171
  -1.445466799879
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.172
  1.7789477326785
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.173
  0.1606977145595
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.174
  1.3427045556727
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.175
  3.9111333860045
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.176
  0.9534036426416
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.177
  0.0405968515546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.178
  -0.8298013902216
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.179
  0.1505750090606
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.18
  0.0511314130747
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.180
  0.3082583782816
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.181
  -0.3696707773745
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.182
  1.5671824842157
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.183
  -1.2568135851224
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.184
  1.9896494291522
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.185
  -0.5917126587601
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.186
  1.693623847627
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.187
  3.7404428286573
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.188
  0.4937085886203
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.189
  0.1184372588129
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.19
  0.0489284996549
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.190
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.191
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.192
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.1184372588129,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.12114929, -0.79878245,  1.20213368]),
    'reference_error': array([-0.12040818,  0.79811885, -0.24778913]),
    'state_of_interest': array([ 7.41108238e-04, -6.63602930e-04,  9.54344544e-01]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.193
  0.1911520897641
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.194
  1.1466693704246
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.195
  0.2337642432678
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.196
  -0.099443112432
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.197
  0.046537264487
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.198
  0.0317405203641
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.199
  0.9934474771073
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.2
  0.0014850074979
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.20
  0.0491534134335
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.200
  -0.038979904638
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.201
  -0.0907911324852
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.202
  1.245021382797
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.203
  0.0030363505142
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.204
  0.0038251236794
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.205
  0.9956070649202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.206
  0.9039312087065
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.207
  2.0279710262249
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.208
  -0.3555390745231
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.209
  0.1817909774278
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.21
  0.1211492872657
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.210
  0.11848203488
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.211
  0.2835983968634
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.212
  0.3269457688406
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.213
  0.1190243096451
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.214
  0.1211492872657
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.215
  -0.7987824538961
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.216
  1.2021336783065
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.217
  0.3644446074751
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.218
  -0.1472730130272
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.219
  2.5461881593664
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.22
  -0.7987824538961
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.220
  -1.445466799879
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.221
  1.7789477326785
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.222
  0.1606977145595
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.223
  1.3427045556727
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.224
  3.9111333860045
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.225
  0.9534036426416
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.226
  0.0537753070258
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.227
  -0.8338545560388
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.228
  0.0507703375423
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.229
  0.1978217409881
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.23
  1.2021336783065
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.230
  -0.4757302990557
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.231
  1.5140328751128
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.232
  -1.2613218659925
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.233
  2.003691895554
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.234
  -0.5835933644749
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.235
  1.5455850828757
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.236
  3.7334853852262
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.237
  0.8577899017205
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.238
  0.1194560838987
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.239
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.24
  0.3644446074751
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.240
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.241
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.1194560838987,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.12114929, -0.79878245,  1.20213368]),
    'reference_error': array([-0.11811294,  0.80260758, -0.20652661]),
    'state_of_interest': array([0.00303635, 0.00382512, 0.99560706]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.242
  0.3261134004272
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.243
  -5.3531270252004
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.244
  2.8602716441211
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.245
  -0.0755537881301
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.246
  0.0050100640503
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.247
  0.0630669867875
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.248
  0.9951326944357
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.249
  0.1157054415766
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.25
  -0.1472730130272
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.250
  0.0211411546329
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.251
  1.4175145724301
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.252
  0.0061981769227
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.253
  0.0106166275622
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.254
  1.0384321978419
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.255
  0.3429663317734
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.256
  -2.7406170076915
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.257
  2.0585673660378
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.258
  0.5053315192977
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.259
  0.4677330343432
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.26
  2.5461881593664
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.260
  0.5186734203071
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.261
  0.3977285127317
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.262
  0.6174793453242
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.263
  0.1211492872657
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.264
  -0.7987824538961
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.265
  1.2021336783065
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.266
  0.3644446074751
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.267
  -0.1472730130272
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.268
  2.5461881593664
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.269
  -1.445466799879
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.27
  -1.445466799879
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.270
  1.7789477326785
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.271
  0.1606977145595
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.272
  1.3427045556727
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.273
  3.9111333860045
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.274
  0.9534036426416
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.275
  0.009855488342
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.276
  -0.8327480713732
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.277
  0.0396525473922
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.278
  0.3062767169055
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.279
  -0.4258409837829
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.28
  1.7789477326785
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.280
  1.466782776124
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.281
  -1.2023050785441
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.282
  2.0488197688012
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.283
  -0.6012852720746
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.284
  1.8141057905486
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.285
  3.6689193936408
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.286
  0.5055302188716
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.287
  0.119940052153
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.288
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.289
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.29
  0.1606977145595
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.290
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.119940052153,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.12114929, -0.79878245,  1.20213368]),
    'reference_error': array([-0.11495111,  0.80939908, -0.16370148]),
    'state_of_interest': array([0.00619818, 0.01061663, 1.0384322 ]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.3
  -9.95833836e-05
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.30
  1.3427045556727
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.31
  3.9111333860045
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.32
  0.9534036426416
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.33
  0.1211250809183
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.34
  -0.7988331348868
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.35
  0.2338507409767
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.36
  0.3644578044837
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.37
  -0.1475995916067
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.38
  1.5780321536525
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.39
  -1.4454161742302
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.4
  -5.7537558e-06
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.40
  1.7791571750641
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.41
  -0.8070537712536
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.42
  1.3428361059333
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.43
  3.9110910114443
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.44
  -0.0139552931025
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.45
  dict({
    'collision': False,
    'cost_direction': 2.523376009453,
    'cost_distance': 0.1188883459604,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.12114929, -0.79878245,  1.20213368]),
    'reference_error': array([-0.12114929,  0.79878246, -0.23401123]),
    'state_of_interest': array([-2.72890000e-09,  1.02375000e-08,  9.68122447e-01]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.46
  2.5478470867227
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.47
  -0.7396654023497
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.48
  3.5389653089522
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.49
  0.0276203813396
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.5
  1.6838243e-05
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.50
  -0.0114764426365
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.51
  0.0313232521802
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.52
  0.9990616896228
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.53
  -0.0179929597137
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.54
  -0.0382780397242
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.55
  -0.5856379443116
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.56
  -2.47790283e-05
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.57
  -4.96531636e-05
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.58
  0.9437225352086
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.59
  1.7213166190998
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.6
  0.9999999948833
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.60
  -0.3840380893018
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.61
  2.2531371815724
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.62
  0.5578944232475
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.63
  0.5634226446243
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.64
  0.5577363768638
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.65
  0.4727662639824
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.66
  0.5956197821663
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.67
  0.1211492872657
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.68
  -0.7987824538961
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.69
  1.2021336783065
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.7
  -8.9293644e-06
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.70
  0.3644446074751
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.71
  -0.1472730130272
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.72
  2.5461881593664
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.73
  -1.445466799879
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.74
  1.7789477326785
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.75
  0.1606977145595
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.76
  1.3427045556727
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.77
  3.9111333860045
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.78
  0.9534036426416
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.79
  0.0777927217032
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.8
  0.0001527112002
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.80
  -0.7895319521144
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.81
  0.3000352466392
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.82
  0.3940566197687
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.83
  -0.0824659504568
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.84
  1.6001023327984
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.85
  -1.3513200169051
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.86
  1.8215240787959
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.87
  -0.8504389728283
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.88
  1.5822920371953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.89
  3.8131782975666
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.9
  -0.7635167337801
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.90
  -0.2374694422034
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.91
  0.1224165607462
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.92
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.93
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.94
  dict({
    'collision': False,
    'cost_direction': 0.0045190451409,
    'cost_distance': 0.1178975156052,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.12114929, -0.79878245,  1.20213368]),
    'reference_error': array([-0.12117407,  0.7987328 , -0.25841114]),
    'state_of_interest': array([-2.47790283e-05, -4.96531636e-05,  9.43722535e-01]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.95
  -5.8867861959302
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.96
  3.2724452556146
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.97
  0.3536958416912
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.98
  -0.0331812069052
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.99
  0.0320759682328
# ---
